@@ -7,6 +7,11 @@
         * include/Rcpp/iostream/Rstreambuf.h: make Rstreambuf a template
         * src/AttributesGen.cpp : include exceptions.h which was included 
         implicitely by Rostream.h before
+        * include/Rcpp/macros/debug.h : factor out the debugging macros
+        * include/Rcpp/api/meat/RObject.h : only declare templates that use
+        as and wrap. they are implemented later in the meat directory
+        * include/Rcpp/api/meat/meat.h: directory containing implementations
+        of templates using as and wrap
         
 2012-12-05  JJ Allaire <jj@rstudio.org>
 
